--- a/index.html
+++ b/index.html
@@ -3,109 +3,107 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BERTOLIS</title>
+<title>BERTOLIS – Partenaire administratif et financier des dirigeants</title>
 
 <style>
 body {
     margin: 0;
     font-family: "Segoe UI", Arial, sans-serif;
-    background-color: #F5F7FA;
-    color: #243B53;
-    line-height: 1.6;
+    color: #1f2937;
+    background-color: #ffffff;
+    line-height: 1.8;
 }
 
 header {
-    background: #FFFFFF;
-    border-bottom: 3px solid #C9A24D;
-    padding: 15px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+    background: linear-gradient(135deg, #0f2a44, #143d63);
+    color: white;
+    padding: 30px 20px;
 }
 
-header img {
-    height: 60px;
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 25px;
 }
 
 nav a {
-    margin-left: 20px;
+    color: white;
     text-decoration: none;
-    color: #243B53;
     font-weight: 600;
 }
 
 nav a:hover {
-    color: #C9A24D;
+    text-decoration: underline;
 }
 
-.section {
+.hero {
+    text-align: center;
     padding: 80px 20px;
+    background: #f9fafb;
 }
 
-.container {
-    max-width: 1100px;
+.hero h1 {
+    font-size: 2.6em;
+    margin-bottom: 20px;
+    color: #0f2a44;
+}
+
+.hero p {
+    font-size: 1.15em;
+    max-width: 900px;
     margin: auto;
 }
 
-h1 {
-    margin-bottom: 30px;
+section {
+    max-width: 1100px;
+    margin: auto;
+    padding: 70px 20px;
 }
 
-.card {
-    background: #FFFFFF;
-    padding: 30px;
-    border-radius: 8px;
-    margin-bottom: 30px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-}
-
-.button {
-    display: inline-block;
-    background: #C9A24D;
-    color: white;
-    padding: 12px 22px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.button:hover {
-    background: #b08b3e;
-}
-
-.pack {
+h2 {
+    color: #0f2a44;
     margin-bottom: 20px;
 }
 
-input, textarea {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 15px;
+.pack {
+    border: 1px solid #e5e7eb;
+    padding: 30px;
+    margin: 30px 0;
+    border-radius: 10px;
+    background: #ffffff;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+}
+
+.pack h3 {
+    margin-top: 0;
+}
+
+button {
+    background: #0f2a44;
+    color: white;
+    border: none;
+    padding: 14px 26px;
+    font-size: 1em;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    cursor: pointer;
+}
+
+button:hover {
+    background: #143d63;
 }
 
 footer {
-    background: #243B53;
+    background: #0f2a44;
     color: white;
     text-align: center;
-    padding: 25px;
+    padding: 30px;
+    font-size: 0.9em;
 }
 
-/* MOBILE */
 @media (max-width: 768px) {
-    header {
-        flex-direction: column;
-    }
-    nav {
-        margin-top: 10px;
-    }
-    nav a {
-        margin: 10px;
-        display: inline-block;
+    .hero h1 {
+        font-size: 2em;
     }
 }
 </style>
@@ -114,143 +112,201 @@ footer {
 <body>
 
 <header>
-    <img src="logo.png" alt="BERTOLIS">
-    <nav>
-        <a href="#presentation">Présentation</a>
-        <a href="#creation">Création</a>
-        <a href="#suivi">Suivi</a>
-        <a href="#formation">Formation</a>
-        <a href="#contact">Contact</a>
-    </nav>
+<nav>
+<a href="#presentation">BERTOLIS</a>
+<a href="#creation">Création</a>
+<a href="#gestion">Accompagnement</a>
+<a href="#formation">Formations</a>
+<a href="#contact">Contact</a>
+</nav>
 </header>
 
+<div class="hero">
+<h1>Libérez-vous de l’administratif. Concentrez-vous sur votre croissance.</h1>
+<p>
+BERTOLIS est le partenaire administratif et financier des dirigeants de TPE et créateurs d’entreprise  
+qui souhaitent structurer leur activité, sécuriser leurs décisions  
+et piloter leur entreprise avec clarté et sérénité.
+</p>
+</div>
+
 <!-- PRESENTATION -->
-<section id="presentation" class="section">
-<div class="container">
-<h1>Présentation</h1>
-
-<div class="card">
-<p><strong>Betty AUBERT – Fondatrice de BERTOLIS</strong></p>
+<section id="presentation">
+<h2>Une approche premium, humaine et orientée résultats</h2>
 
 <p>
-Directrice Administrative et Financière depuis plus de 15 ans, j’accompagne
-les créateurs d’entreprise et dirigeants de TPE dès la création de leur activité,
-puis dans le suivi administratif et organisationnel au quotidien.
+Diriger une entreprise implique de jongler en permanence entre le développement commercial,
+les obligations administratives, la gestion financière et l’organisation interne.
+Ces contraintes, souvent subies, freinent la prise de recul et la performance.
 </p>
 
 <p>
-Mon parcours m’a permis de gérer l’ensemble des fonctions supports :
-administration des ventes (ADV), contrôle de gestion, comptabilité,
-logistique et informatique.
+<strong>BERTOLIS n’est pas un simple prestataire.</strong>  
+C’est un véritable partenaire de confiance, qui s’intègre à votre organisation
+pour structurer, sécuriser et optimiser votre gestion administrative et financière.
+</p>
+
+<h2>Betty AUBERT – Fondatrice de BERTOLIS</h2>
+
+<p>
+Directrice Administrative et Financière depuis plus de 15 ans, j’ai accompagné
+des dirigeants à chaque étape de la vie de leur entreprise :
+création, structuration, croissance et optimisation.
 </p>
 
 <p>
-J’ai également conduit de nombreux projets de mise en place d’ERP
-(comptabilité, ADV, EDI, workflows), avec une approche pragmatique et
-orientée résultats.
+Mon expertise couvre l’ensemble des fonctions supports :
+administration des ventes, contrôle de gestion, comptabilité,
+organisation des process, outils informatiques et ERP.
 </p>
 
 <p>
-Avec BERTOLIS, je propose un accompagnement structuré, fiable et
-personnalisé, permettant aux dirigeants de se concentrer sur le
-développement de leur activité, en toute sérénité.
+Ma valeur ajoutée repose sur une approche pragmatique,
+pédagogique et orientée décisions.
+Je transforme la complexité administrative en outils clairs,
+utiles et exploitables pour les dirigeants.
 </p>
-</div>
-</div>
 </section>
 
 <!-- CREATION -->
-<section id="creation" class="section">
-<div class="container">
-<h1>Création d’entreprise</h1>
+<section id="creation">
+<h2>Création d’entreprise : partez sur des bases solides</h2>
 
-<div class="card">
-<ul>
-<li>Accompagnement administratif</li>
-<li>Choix du statut juridique</li>
-<li>Élaboration du business plan</li>
-<li>Formalités de création</li>
-</ul>
-<br>
-<a href="#contact" class="button">Demander un accompagnement</a>
+<p>
+Les premières décisions sont souvent les plus engageantes.
+Un mauvais choix de statut ou une vision financière floue
+peuvent rapidement devenir des freins coûteux.
+</p>
+
+<div class="pack">
+<h3>Choix du statut juridique</h3>
+<p>
+Nous analysons votre situation personnelle, vos objectifs
+et votre projet pour sélectionner la structure la plus sécurisante
+et la plus cohérente sur le long terme.
+</p>
 </div>
+
+<div class="pack">
+<h3>Business plan & prévisionnel financier</h3>
+<p>
+Un prévisionnel fiable est un outil stratégique.
+Il vous permet d’anticiper, de décider et de piloter.
+Nous construisons ensemble un business plan clair,
+réaliste et directement exploitable.
+</p>
+</div>
+
+<div class="pack">
+<h3>Formalités administratives</h3>
+<p>
+BERTOLIS prend en charge l’ensemble des démarches
+pour vous garantir une création conforme, rapide et sereine,
+sans stress ni perte de temps.
+</p>
 </div>
 </section>
 
-<!-- SUIVI -->
-<section id="suivi" class="section">
-<div class="container">
-<h1>Suivi administratif</h1>
+<!-- GESTION -->
+<section id="gestion">
+<h2>Accompagnement administratif et financier continu</h2>
 
-<div class="card pack">
-<h3>Pack Essentiel</h3>
-<p>Gestion administrative – Organisation & suivi</p>
+<p>
+Une entreprise bien organisée est une entreprise qui gagne du temps,
+de la visibilité et de la rentabilité.
+</p>
+
+<div class="pack">
+<h3>Gestion administrative structurée</h3>
+<p>
+Mise en place d’une organisation claire, suivi des documents,
+coordination avec les partenaires et préparation des éléments financiers.
+</p>
 </div>
 
-<div class="card pack">
-<h3>Pack Confort</h3>
-<p>Gestion administrative – Déclarations – Support mensuel</p>
+<div class="pack">
+<h3>Déclarations & obligations</h3>
+<p>
+Anticipation des échéances, sécurisation des obligations
+et accompagnement pour éviter erreurs et pénalités.
+</p>
 </div>
 
-<div class="card pack">
-<h3>Pack Sérénité</h3>
-<p>Accompagnement complet, personnalisé et continu</p>
-</div>
+<div class="pack">
+<h3>Support mensuel premium</h3>
+<p>
+Un accompagnement sur mesure, régulier,
+avec analyse, conseils et optimisation continue
+pour vous permettre de piloter avec sérénité.
+</p>
 </div>
 </section>
 
-<!-- FORMATION -->
-<section id="formation" class="section">
-<div class="container">
-<h1>Formations</h1>
+<!-- FORMATIONS -->
+<section id="formation">
+<h2>Formations professionnelles à forte valeur ajoutée</h2>
 
-<div class="card">
-<h3>Excel</h3>
-<p><strong>Niveau :</strong> Débutant / Intermédiaire / Avancé</p>
-<p><strong>Durée :</strong> Adaptable selon le besoin</p>
-<a href="#contact" class="button">S'inscrire / Demander info</a>
+<p>
+La maîtrise des outils et des bases financières
+est un levier puissant de performance et d’autonomie.
+</p>
+
+<div class="pack">
+<h3>Excel – Débutant à Avancé</h3>
+<p><strong>Durée :</strong> 1 à 2 jours – <strong>Niveau :</strong> Débutant, Intermédiaire, Avancé</p>
+<p>
+Des formations progressives et concrètes,
+orientées cas pratiques et besoins réels des entrepreneurs.
+</p>
+<button>S’inscrire / Demander info</button>
 </div>
 
-<div class="card">
-<h3>Power BI</h3>
-<p><strong>Niveau :</strong> Initiation</p>
-<p><strong>Durée :</strong> Formation pratique</p>
-<a href="#contact" class="button">S'inscrire / Demander info</a>
+<div class="pack">
+<h3>Power BI – Initiation</h3>
+<p><strong>Durée :</strong> 1 jour – <strong>Niveau :</strong> Débutant</p>
+<p>
+Apprenez à transformer vos données en tableaux de bord clairs
+pour mieux piloter votre activité.
+</p>
+<button>S’inscrire / Demander info</button>
 </div>
 
-<div class="card">
-<h3>Comptabilité</h3>
-<p><strong>Public :</strong> Entrepreneurs</p>
-<p><strong>Durée :</strong> Formation orientée pratique</p>
-<a href="#contact" class="button">S'inscrire / Demander info</a>
-</div>
+<div class="pack">
+<h3>Comptabilité – Entrepreneurs</h3>
+<p><strong>Durée :</strong> 1 jour – <strong>Niveau :</strong> Tous niveaux</p>
+<p>
+Comprendre vos chiffres pour prendre les bonnes décisions
+et échanger efficacement avec vos partenaires.
+</p>
+<button>S’inscrire / Demander info</button>
 </div>
 </section>
 
 <!-- CONTACT -->
-<section id="contact" class="section">
-<div class="container">
-<h1>Contact</h1>
+<section id="contact">
+<h2>Parlons de votre projet</h2>
 
-<div class="card">
-<p><strong>Téléphone :</strong> 06 XX XX XX XX</p>
-<p><strong>Email :</strong> contact@bertolis.fr</p>
-</div>
+<p>
+Chaque entreprise est unique.
+Un premier échange permet de comprendre vos enjeux
+et de définir l’accompagnement le plus pertinent.
+</p>
 
-<div class="card">
+<p><strong>Téléphone :</strong> 06 XX XX XX XX<br>
+<strong>Email :</strong> contact@bertolis.fr</p>
+
 <form>
-<input type="text" placeholder="Nom" required>
-<input type="email" placeholder="Email" required>
-<textarea placeholder="Message" rows="5" required></textarea>
-<button class="button" type="submit">Envoyer</button>
+<input type="text" placeholder="Nom" style="width:100%;padding:12px;margin-bottom:12px;">
+<input type="email" placeholder="Email" style="width:100%;padding:12px;margin-bottom:12px;">
+<textarea placeholder="Votre message" style="width:100%;padding:12px;height:140px;"></textarea><br><br>
+<button>Envoyer</button>
 </form>
-</div>
-</div>
 </section>
 
 <footer>
-© 2026 – BERTOLIS
+© BERTOLIS – Partenaire administratif et financier des dirigeants
 </footer>
 
 </body>
 </html>
+
